--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     --card-light-blue: rgba(68, 211, 210, 1);
     --card-yellow: rgba(252, 174, 74, 1);
     --card-blue: rgba(84, 158, 242, 1);
-    --card-grey: rgba(77, 79, 98, 1);
+    --text-grey: rgba(77, 79, 98, 1);
 }
 
 * {
@@ -14,8 +14,133 @@
 
 html {
     font-family: 'Poppins', sans-serif;
+    color: var(--text-grey);
 }
 
 main {
-    padding: 40px 32px 0;
+    padding: 85px 32px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 76px;
+}
+
+h1 {
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 0.17px;
+    margin-bottom: 13px;
+}
+
+h3{
+    font-size: 24px;
+    font-weight: 200;
+    letter-spacing: 0.17px;
+    order: -1;
+}
+
+p {
+    font-size: 15px;
+    line-height: 25px;
+    letter-spacing: 0.1px;
+    al
+}
+
+#cards {
+    display: flex;
+    gap: 25px;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.card {
+    min-height: 222px;;
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.30);
+    border-radius: 12px;
+    padding: 28px;
+    display: flex;
+    flex-direction: column;
+    border-width: 4px 0 0 0;
+    border-style: solid;
+    max-width: 350px;
+    max-height: 250px;
+}
+
+.card:nth-of-type(1) {
+    border-color: var(--card-light-blue);
+}
+
+.card:nth-of-type(2) {
+    border-color: var(--card-red);
+}
+
+.card:nth-of-type(3) {
+    border-color: var(--card-yellow);
+}
+
+.card:nth-of-type(4) {
+    border-color: var(--card-blue);
+}
+
+.card h2 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.card p {
+    font-size: 13px;
+    letter-spacing: 0.1px;
+    line-height: 23px;
+
+}
+
+.card img {
+    width: 57px;
+    height: 57px;
+    align-self: flex-end;
+    justify-self: flex-end;
+    margin-top: 50px;
+}
+
+@media (min-width:450px) {
+    header p {
+        max-width: 450px;
+    }
+}
+
+@media (min-width:680px) {
+    h1, h3 {
+        font-size: 36px;
+        line-height: 42px;
+    }
+    
+    header p {
+        max-width: 540px;
+        font-size: 15px;
+    }
+
+    .card img {
+        width: 64px;
+        height: 64px;
+    }
+}
+
+@media (min-width:1163px) {
+    .card:nth-of-type(1) {
+        transform: translatey(50%);
+    }
+    
+    .card:nth-of-type(3) {
+        order: 3;
+    }
+    
+    .card:nth-of-type(4) {
+        transform: translatey(50%);
+    }
+    
 }
